# csh-superconductivity-gaia

./: .gitignore  README.md  pyproject.toml
.gaia/: beliefs.json  compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
.github-output/: README.md  manifest.json  narrative-outline.md
.github-output/docs/public/assets/: paper.md
.github-output/docs/public/data/: beliefs.json  graph.json  meta.json
.github-output/docs/public/data/sections/: conclusions.md  experiment.md  retraction.md
.github-output/wiki/: Home.md  Inference-Results.md  Module-background.md  Module-experiment.md
src/csh_superconductivity/: __init__.py  background.py  conclusions.py  experiment.py  priors.py  retraction.py
